2005-01-12 00:41  Alexander Malmberg <alexander@malmberg.org>

	* Printing/GSCUPS/GSCUPSPrinter.h (GSCUPSDummyPrinterName): New
	variable.
	* Printing/GSCUPS/GSCUPSPrinter.m (GSCUPSDummyPrinterName): New
	variable.
	(+printerWithName:): Warn and return a dummy printer when requested.
	* Printing/GSCUPS/GSCUPSPrintInfo.m (defaultPrinter): If there's
	no default CUPS printer set, return a dummy printer.

	Fixes bug #10916.

2005-01-11 23:50  Alexander Malmberg <alexander@malmberg.org>

	* Headers/AppKit/NSBezierPath.h (NSWindingRule)
 	(-containsPoint): Document.
	(-windingCountAtPoint:): New method.
	* Source/NSBezierPath.m: Remove some trailing whitespace.
	(PI): Correct rounding.
	(contribution, -contributionToContains:): Remove.
	(winding_line, winding_curve): New functions.
	(-windingCountAtPoint:): New method.
	(-containsPoint:): Use -windingCountAtPoint: instead of
	-contributionToContains:. Don't flatten the path.

2005-01-09  Matt Rice  <ratmice@yahoo.com>
	
	* Source/NSTableHeaderCell.m (-drawInteriorWithFrame:inView:): Use
	the correct background/highlight colors and NSCompositeSourceOver for
	image cells. 
	(-setHighlighted): Use controlHighlightColor instead of controlColor.
	
2004-12-30  Quentin Mathe <qmathe@club-internet.fr>

        * Source/GSToolbarView.m: Modified to be more compliant with GNUstep 
        coding standards.
        (-draggingEntered:):
        (-draggingUpdated:): Prevents the user to customize the toolbar when 
        -allowsUserCustomization returns NO (bug #11393).
        * Source/NSToolbarItem.m: Modified to be more compliant with GNUstep 
        coding standards.
        (-mouseDown:): Prevents the user to customize the toolbar when 
        -allowsUserCustomization returns NO (bug #11393).

2004-12-23 05:38 Gregory John Casamento <greg_casamento@yahoo.com>

        * Images/MagnifyGlass.tiff: Added.  The NSColorPanel class uses 
        this image.
	
2004-12-13  Quentin Mathe <qmathe@club-internet.fr>
